
  * Format time using commonyears + days + hh:mm:ss.sss s.
  * Modify @(unit, text) operator to return text instead of cstring.
  * Import definitions.units from GNU units 2.17 with 13 new units.
  * Add π to known units.
  * Remove bison 2 compat mode, but keep pregenerated files for jessie and
    trusty.
  * Support send/receive via the binary protocol.

 -- Christoph Berg <myon@debian.org>  Sun, 08 Jul 2018 21:46:17 +0200

postgresql-unit (6.0-1) unstable; urgency=medium

  * Add @@ operator: similar to @, but returns the value of the resulting unit
    as double precision number.
  * Fix parsing of addition/subtraction in unit values.
  * Grant SELECT on unit prefixes and units table to public.
  * Add unit_load() function to load/update the data tables.

 -- Christoph Berg <christoph.berg@credativ.de>  Wed, 07 Mar 2018 09:30:42 +0100

postgresql-unit (5.0-1) unstable; urgency=medium

  * Add rounding function.
  * Import definitions.units from GNU units 2.16 with 70 new units.
    (The file header erroneously says 2.19.)
  * debian/watch: Ignore debian/ tags.

 -- Christoph Berg <christoph.berg@credativ.de>  Wed, 10 Jan 2018 12:16:58 +0100

postgresql-unit (4.0-2) unstable; urgency=medium

  * Upload with PostgreSQL 10 support.
  * Mark package as non-native and add watch file.

 -- Christoph Berg <myon@debian.org>  Wed, 27 Sep 2017 20:42:41 +0200

postgresql-unit (4.0) unstable; urgency=medium

  * Support exponents written using Unicode superscript characters.
  * Report 22P02/invalid_text_representation on invalid unit input.
  * Fix crash when unit_reset() runs into an OOM error. Patch by Andreas
    Seltenreich, thanks!
  * Change @ operator signature to (unit, text).

 -- Christoph Berg <myon@debian.org>  Fri, 07 Jul 2017 21:42:13 +0200

postgresql-unit (3.1) experimental; urgency=medium

  * Reupload to Debian, the 3.0 tarball uploaded contained generated files
    that broke out-of-tree builds. No source changes.
