@@ -7,6 +7,7 @@ postgresql-unit (7.0-1) UNRELEASED; urgency=medium
   * Remove bison 2 compat mode, but keep pregenerated files for jessie and
     trusty.
   * Support send/receive via the binary protocol.
+  * Support Infinity and NaN.
 
  -- Christoph Berg <myon@debian.org>  Sun, 08 Jul 2018 21:46:17 +0200
 
